ros_ws/log/build_2026-05-04_23-26-38/line_follower/stderr.log
  File "/home/youssef/ros2-line-follower/ros_ws/install/line_follower/lib/python3.10/site-packages/line_follower/line_sensor_node.py", line 1
    7"""
     ^^
SyntaxError: invalid syntax

